--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,8 @@
-ul,li{margin:0;padding:0;}
+body,html{
+    width: 100%;
+    overflow: hidden;
+}
+body,html,div,ul,li{margin:0;padding:0;}
 @media screen and (min-width:240px) {
     html, body{
         font-size:9px;
@@ -24,14 +28,30 @@ ul,li{margin:0;padding:0;}
         font-size:36px;
     }
 }
-div.imgbox{width:30rem;height:16.5rem;overflow:hidden;margin:0 auto;}
+div.imgbox{width:28rem;height:16.5rem;overflow:hidden;margin:0 auto;}
 div.imgbox ul{clear:both;width:75rem;}
 div.imgbox ul 
-li{float:left;width:30rem;height:16.5rem;overflow:hidden;text-align:center;}
-div.imgbox ul li img{width:30rem;height:16.5rem;}
+li{float:left;width:28rem;height:16.5rem;overflow:hidden;text-align:center;}
+div.imgbox ul li img{width:28rem;height:16.5rem;}
 #page{color:red;}
 
 
 
-
-.footer{background-color: #000;}
+.flexcontainer{
+    display:flex;
+    flex-flow:row;
+}
+.flex-item{
+    flex:1;
+    text-align: center;
+    line-height: 4rem;
+}
+.footer{
+    border-top:0.07rem solid #B9B7B7;
+    background-color: #F9F6F6;
+    position: fixed;
+    bottom:0px;
+    left: 0px;
+    width: 100%;
+    height: 4rem;
+}
