--- a/css/index.css
+++ b/css/index.css
@@ -60,3 +60,26 @@ div.imgbox ul li img{width:28rem;height:16.5rem;}
     height: auto;
     line-height:auto;
 }
+
+/*空白横条*/
+.blackspace{
+    width: 100%;
+    height: 1rem;
+    background-color: #EFE4E4;
+}
+
+/*头像栏*/
+.personinfo{
+    margin:1rem 1rem 1rem 1rem;
+    /*width: 100%;*/
+    height: 4rem;
+    padding:1.5rem 0.5rem 0.5rem 1.5rem;
+
+}
+.pi-head{
+    width: 3rem;
+    height: 3rem;
+    background-color: white;
+    border-radius: 50px;
+    border:0px 0px 1px 0px;
+}
