--- a/css/test.css
+++ b/css/test.css
@@ -47,7 +47,7 @@ body,html,div,ul,li{margin:0;padding:0;}
     margin-bottom: 4rem;
 }
 .backposi{
-    width:1.7rem;
+    width:3.4rem;
     height: 1.7rem;
     margin-top: 1rem;
     margin-left: 1rem;
@@ -66,32 +66,66 @@ body,html,div,ul,li{margin:0;padding:0;}
 .linka{
     display: block;
 }
-.totepic{
+.cont{
     width: 100%;
-  /*  height: 30rem;*/
-    overflow: hidden;
-  /*  background-color: red;*/
-}
-.totetitle{
-    font-size: 1.4rem;
+    height: auto;
+    margin-top: 4rem;
     text-align: center;
-    margin-top: 0.5rem;
+}
+.boxlist{
+    width: 100%;
+    overflow: hidden;
+    display: block;
+    background: #FFFAFF;    
+}
+.listleft{
+    overflow: hidden;
+    float: left;
+    width: 35%;
+}
+.listright{
+float: left;
+width: 64%;
+overflow: hidden;
+font-size: 1rem;
 
 }
-.totetext{
-    font-size: 1rem;
+.proinfo{
+    width: 80%;
     text-align: center;
-    margin-top: -1rem;
-    color: #888;
+
 }
-a{
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-/*空白横条*/
-.blackspace{
+.boxlist .listright .proinfo ul{
+    list-style: none;
+    font-size: 0.6rem;
     width: 100%;
-    height: 1rem;
-    background-color: #EFE4E4;
+    margin-left: 1rem;
 }
+.boxlist .listright .proinfo ul li{
+    display: inline-block;
+    border-right: 1px dotted #aeb0b2;
+    text-align: center;
+    list-style: none;
+    padding: 0.3rem;
+    width: 3rem;
+}
+
+.boxlist .listright .proinfo ul li b{
+    color: #eb215a;
+    font-size: 1rem;
+    font-weight: 700;
+}
+.btn{
+      text-align: center;
+    margin: 0.5rem;}
+.btn a {
+        display: inline-block;
+        width: 5rem;
+        background: #eb215a;
+        border-radius: 5px;
+        font-size: 1rem;
+        font-weight: 700;
+        color: #fff;
+        text-decoration: none; 
+    }
+    
