--- a/css/tote.css
+++ b/css/tote.css
@@ -1,7 +1,7 @@
 /*初始化设置*/
 body,html{
     width: 100%;
-    overflow:-Scroll;
+    overflow:scroll;
     overflow-x: hidden;
     font-family: "Microsoft YaHei",Sans-serif ;
 }
@@ -52,7 +52,21 @@ body,html,div,ul,li{margin:0;padding:0;}
     margin-top: 1rem;
     margin-left: 1rem;
     float: left;
-     overflow: hidden;
+    overflow: hidden;
+}
+.headerbox{
+    line-height: 4rem;
+    font-size: 1.5rem;
+    /*margin-top: 0rem;*/
+    /*width: 20rem;*/
+    /*height:100%;*/
+    text-align: center;
+    /*float: left;*/
+}
+.header-text{
+    height: 100%;
+    line-height: 2rem;
+    font-size: 2rem;
 }
 .moreposi{
     width: 1.7rem;
@@ -62,6 +76,12 @@ body,html,div,ul,li{margin:0;padding:0;}
     margin-right: 2rem;
     margin-top: 1rem;
 }
+
+/*.totetext{
+    float: left;
+    font-size: 30rem;
+    color: #D9ACAC；
+}*/
 /*大赏图片及文字*/
 .linka{
     display: block;
@@ -81,9 +101,12 @@ body,html,div,ul,li{margin:0;padding:0;}
 .totetext{
     font-size: 1rem;
     text-align: center;
-    margin-top: -1rem;
+    margin-top: 0rem;
     color: #888;
+    /*float: left;*/
+    /*line-height: 4rem;*/
 }
+
 a{
     text-decoration: none;
     color: #333;
