--- a/css/test.css
+++ b/css/test.css
@@ -125,7 +125,7 @@ font-size: 1rem;
         border-radius: 5px;
         font-size: 1rem;
         font-weight: 700;
-        color: #fff;
+        color: #ff79a5;
         text-decoration: none; 
     }
     
