--- a/css/register.css
+++ b/css/register.css
@@ -34,6 +34,8 @@ body,html,div,ul,li{margin:0;padding:0;}
 /*标签连接*/
 .linka{
     display: block;
+    width: 100%;
+    height: 100%;
 }
 .header{
     width: 100%;
