--- a/css/totelist1.css
+++ b/css/totelist1.css
@@ -1,7 +1,7 @@
 /*初始化设置*/
 body,html{
     width: 100%;
-    overflow:-Scroll;
+    overflow:scroll;
     overflow-x: hidden;
     font-family: "Microsoft YaHei",Sans-serif ;
 }
@@ -34,6 +34,8 @@ body,html,div,ul,li{margin:0;padding:0;}
 /*标签连接*/
 .linka{
     display: block;
+    width: 100%;
+    height: 100%;
 }
 /*头部*/
 .header{
