--- a/css/firstpage.css
+++ b/css/firstpage.css
@@ -68,13 +68,13 @@ div.imgbox .fp-search{
     /*padding: 3rem;*/
 }
 .footer{
-    border-top:0.07rem solid #B9B7B7;
+    /*border-top:0.07rem solid #B9B7B7;*/
     background-color: #F9F6F6;
     position: fixed;
     bottom:0px;
     left: 0px;
     width: 100%;
-    height: 4rem;
+    height:4rem;
     line-height: 4rem;
     /*padding-top: 2rem;*/
 
@@ -122,12 +122,12 @@ div.imgbox .fp-search{
 
 }
 .buttonbox3 a{
-    background-image: url(../img/user.png);
+    background-image: url(../img/time.png);
     background-repeat: repeat-y;
 
 }
 .buttonbox4 a{
-    background-image: url(../img/time.png);
+    background-image: url(../img/user.png);
     background-repeat: repeat-y;
 
 }
@@ -136,7 +136,7 @@ div.imgbox .fp-search{
 }
 
 .buttononNav{
-    background-position:100% 98%; 
+    background-position:100% 88%; 
 }
 /*空白横条*/
 .blackspace{
