--- a/css/firstpage.css
+++ b/css/firstpage.css
@@ -141,8 +141,8 @@ div.imgbox .fp-search{
 /*空白横条*/
 .blackspace{
     width: 100%;
-    height: 1rem;
-    background-color: #EFE4E4;
+    height:auto !important;
+    background-color: #bbb;
 }
 
 /*头像栏*/
@@ -187,9 +187,9 @@ div.imgbox .fp-search{
     margin-left: 2rem;
     margin-right: 2rem;
 }
-.data-list{
-    height: 3rem;
-}
+// .data-list{
+//     height: 3rem;
+// }
 .test{
     width: 20px;
     height: 10px;
@@ -202,4 +202,9 @@ div.imgbox .fp-search{
     width: 100%;
     height: 20rem;
     overflow: hidden;
+}
+.postcontent_style{
+    width:80%;
+    height:auto!important;
+    margin-left:10%;
 }
